tests/fixtures/errors/nonexhaustive_match.z
# E0036: a variant match that omits arms and has no else clause. The
# subject comes from a call so no construction narrowing applies (a
# directly-constructed subject with its arm's case IS exhaustive).
Color: variant {
    red: null
    green: null
    blue: null
}

mk: function out Color is {
    return Color.red
}

main: function is {
    c: mk
    match (
        c
    ) case red then {
        print "r"
    }
}
